--- a/exp-provider/pom.xml
+++ b/exp-provider/pom.xml
@@ -32,6 +32,12 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ff</groupId>
+            <artifactId>exp-consumer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
