--- a/exp-provider/pom.xml
+++ b/exp-provider/pom.xml
@@ -4,18 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ff</groupId>
+    <groupId>com.fay</groupId>
     <artifactId>exp-provider</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.ff</groupId>
-            <artifactId>ff-rpc-basic</artifactId>
+            <groupId>com.fay</groupId>
+            <artifactId>fay-rpc-basic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.ff</groupId>
+            <groupId>com.fay</groupId>
             <artifactId>exp-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -33,7 +33,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.ff</groupId>
+            <groupId>com.fay</groupId>
             <artifactId>exp-consumer</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
