--- a/exp-consumer/pom.xml
+++ b/exp-consumer/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>com.fay</groupId>
-            <artifactId>fay-rpc-basic</artifactId>
+            <artifactId>fay-rpc-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
